finish html crash course

--- a/index.html
+++ b/index.html
@@ -161,5 +161,9 @@
         <blockquote cite="https://naruto.fandom.com/wiki/Rasengan">
             Minato came up with the idea for this technique after seeing a Tailed Beast Ball being used.[2] Because his lover, Kushina Uzumaki, was a jinchūriki, she would inevitably be deployed to fight opponents who would use Tailed Beast Balls against her. Minato therefore wanted to develop a technique that Kushina could use to match against those opponents, which also worked with her chakra volume as a jinchūriki. Minato struggled with the original concepts for the technique, as they were either too weak or too unstable for use. It was only from a conversation with Jiraiya that Minato thought of a way to make the technique usable. Because of Jiraiya's inspiration, Minato wanted to call the technique "Halo Frozen Dessert Hair Whorl Jiraiya Twin Formula Sphere" (光輪冷菓発起旋毛自来也双式ノ丸, Kōrin Reika Hakki Tsumuji Jiraiya Sōshiki no Gan), but both Jiraiya and Kushina felt it was too long and lame. Kushina suggested "Rasengan" instead, which Minato agreed was a better name.[3] Minato would continue refining the Rasengan, ultimately taking three years of development time to perfect it.[4]
         </blockquote>
+
+        <p> The <abbr title="World Wide Web">WWW</abbr> is the acronym for World Wide Web.</p>
+
+        <p><cite>HTML CRASH COURSE</cite> by Stephen Nikkole Lumban</p>
     </body>
 </html>
